<resources>
    <string name="app_name">PiCar</string>
    <string name="ileri"> Forward </string>
    <string name="geri"> Back </string>
    <string name="sol"> Left </string>
    <string name="sag"> RIght </string>
    <string name="connect">Connect</string>
    <string name="stop">Stop</string>
    <string name="send">Sending data to PC</string>
    <string name="finish">finish</string>
    <string name="data">slm Android</string>
    <string name="error">Error!!</string>
    <string name="exit">ExIT</string>
</resources>
