<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.osman.picar.MainActivity"
    android:background="@drawable/car4"
    >


    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="25dp"
        android:textColor="@color/clock"
        android:id="@+id/clock"
        />

    <TextView
        android:id="@+id/display"
        android:layout_width=  "wrap_content"
        android:layout_height="wrap_content"
        android:height="140dp"
        android:width="460dp"

        android:layout_marginTop="30dp"
        android:textSize="18dp"

        />




    <Button
        android:id="@+id/ileri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_centerVertical="true"
        android:textSize="@dimen/activity_horizontal_margin"
        android:text="@string/ileri"
        />
    <Button
        android:id="@+id/geri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="162dp"
        android:layout_below="@+id/sol"
        android:text="@string/geri"
         />

    <Button
        android:id="@+id/sag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="220dp"
        android:layout_toRightOf="@+id/ileri"
        android:text="@string/sag"
        />

    <Button
        android:id="@+id/sol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="220dp"
        android:layout_toLeftOf="@+id/ileri"
        android:text="@string/sol"
        />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginLeft="120dp"
        android:textSize="@dimen/activity_horizontal_margin"

        android:text="@string/connect"
        />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="120dp"
        android:layout_marginTop="220dp"
        android:textSize="@dimen/activity_horizontal_margin"

        android:text="@string/stop"
        />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/activity_horizontal_margin"

        android:text="@string/exit"
        />

</RelativeLayout>
